--- a/ZXcList.tex
+++ b/ZXcList.tex
@@ -5,246 +5,96 @@
 \input{tikzcardsTwo.tex}
 \begin{document}
 \begin{center}\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardtitle{Recurring Jasper} 
+\cardbackground{Attack} 
+\cardtitle{Bolster} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{}. \newline If this is the first time you've played a Recurring Jasper this turn, you may place this on top of your deck.} 
-\cardimage{G16} 
-\cardprice{4} 
+\cardcontent{Unleash. Any player suffers 3 damage. \newline \Or \newline The nemesis gains one nemesis token.} 
+\cardimage{FinalMan} 
+\cardprice{1} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardtitle{Recurring Jasper} 
+\cardbackground{Minion} 
+\cardtitle{Thorned Quka} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{}. \newline If this is the first time you've played a Recurring Jasper this turn, you may place this on top of your deck.} 
-\cardimage{G16} 
-\cardprice{4} 
+\cardcontent{\Persistent: The nemesis gains one nemesis token.} 
+\cardimage{FinalMan} 
+\cardprice{1} 
+\cardhp{4} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardtitle{Recurring Jasper} 
+\cardbackground{Power} 
+\cardtitle{Thickened Hide} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{}. \newline If this is the first time you've played a Recurring Jasper this turn, you may place this on top of your deck.} 
-\cardimage{G16} 
-\cardprice{4} 
+\cardcontent{\To \Discard: Spend 5 \Money{}. \newline \Power 2: Unleash. The nemesis gains one nemesis token.} 
+\cardimage{FinalMan} 
+\cardprice{1} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardtitle{Recurring Jasper} 
+\cardbackground{Attack} 
+\cardtitle{Unveil} 
 \cardborder{} 
-\cardcontent{Gain 2 \Money{}. \newline If this is the first time you've played a Recurring Jasper this turn, you may place this on top of your deck.} 
-\cardimage{G16} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardtitle{Recurring Jasper} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. \newline If this is the first time you've played a Recurring Jasper this turn, you may place this on top of your deck.} 
-\cardimage{G16} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardtitle{Recurring Jasper} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. \newline If this is the first time you've played a Recurring Jasper this turn, you may place this on top of your deck.} 
-\cardimage{G16} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Gem} 
-\cardtitle{Recurring Jasper} 
-\cardborder{} 
-\cardcontent{Gain 2 \Money{}. \newline If this is the first time you've played a Recurring Jasper this turn, you may place this on top of your deck.} 
-\cardimage{G16} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardtitle{Lucky Coin} 
-\cardborder{} 
-\cardcontent{Any ally may discard a Lucky Coin in hand and draw a card. \newline Gain 1 charge or focus your closed breach with the lowest focus cost. \newline If an ally discarded a Lucky Coin, resolve both.} 
-\cardimage{r28} 
+\cardcontent{Gravehold suffers 6 damage. \newline \Or \newline The nemesis gains two nemesis tokens.} 
+\cardimage{FinalMan} 
 \cardprice{2} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardtitle{Lucky Coin} 
+\cardbackground{Minion} 
+\cardtitle{Inhibiting Drake} 
 \cardborder{} 
-\cardcontent{Any ally may discard a Lucky Coin in hand and draw a card. \newline Gain 1 charge or focus your closed breach with the lowest focus cost. \newline If an ally discarded a Lucky Coin, resolve both.} 
-\cardimage{r28} 
+\cardcontent{\Immediately: This minion suffers 1 damage for each nemesis token the nemesis has. \newline \Persistent: Any player suffers 3 damage.} 
+\cardimage{FinalMan} 
+\cardprice{2} 
+\cardhp{14} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Empower Ritual} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 3: The nemesis gains two nemesis tokens. Gravehold suffers 4 damage.} 
+\cardimage{FinalMan} 
 \cardprice{2} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardtitle{Lucky Coin} 
+\cardbackground{Attack} 
+\cardtitle{Terminate} 
 \cardborder{} 
-\cardcontent{Any ally may discard a Lucky Coin in hand and draw a card. \newline Gain 1 charge or focus your closed breach with the lowest focus cost. \newline If an ally discarded a Lucky Coin, resolve both.} 
-\cardimage{r28} 
-\cardprice{2} 
+\cardcontent{The nemesis gains two nemesis tokens. \newline Unleash.} 
+\cardimage{FinalMan} 
+\cardprice{3} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardtitle{Lucky Coin} 
+\cardbackground{Minion} 
+\cardtitle{Stabilizing Hulk} 
 \cardborder{} 
-\cardcontent{Any ally may discard a Lucky Coin in hand and draw a card. \newline Gain 1 charge or focus your closed breach with the lowest focus cost. \newline If an ally discarded a Lucky Coin, resolve both.} 
-\cardimage{r28} 
-\cardprice{2} 
+\cardcontent{\Persistent: The nemesis gains one nemesis token. Unleash.} 
+\cardimage{FinalMan} 
+\cardprice{3} 
+\cardhp{15} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Relic} 
-\cardtitle{Lucky Coin} 
+\cardbackground{Power} 
+\cardtitle{The End} 
 \cardborder{} 
-\cardcontent{Any ally may discard a Lucky Coin in hand and draw a card. \newline Gain 1 charge or focus your closed breach with the lowest focus cost. \newline If an ally discarded a Lucky Coin, resolve both.} 
-\cardimage{r28} 
-\cardprice{2} 
+\cardcontent{\Immediately: The nemesis gains 15 life. \Power 4: Unleash eight times.} 
+\cardimage{FinalMan} 
+\cardprice{3} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Force Amplifier} 
+\cardbackground{Attack} 
+\cardtitle{Heave} 
 \cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If this was cast from an opened III or IV breach, deal 1 additional damage.} 
-\cardimage{S18} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Force Amplifier} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If this was cast from an opened III or IV breach, deal 1 additional damage.} 
-\cardimage{S18} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Force Amplifier} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If this was cast from an opened III or IV breach, deal 1 additional damage.} 
-\cardimage{S18} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Force Amplifier} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If this was cast from an opened III or IV breach, deal 1 additional damage.} 
-\cardimage{S18} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Force Amplifier} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If this was cast from an opened III or IV breach, deal 1 additional damage.} 
-\cardimage{S18} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Bladed Disc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If there is another Bladed Disc in any player's discard pile, focus any player's breach.} 
-\cardimage{S25} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Bladed Disc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If there is another Bladed Disc in any player's discard pile, focus any player's breach.} 
-\cardimage{S25} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Bladed Disc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If there is another Bladed Disc in any player's discard pile, focus any player's breach.} 
-\cardimage{S25} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Bladed Disc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If there is another Bladed Disc in any player's discard pile, focus any player's breach.} 
-\cardimage{S25} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Bladed Disc} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 3 damage. \newline If there is another Bladed Disc in any player's discard pile, focus any player's breach.} 
-\cardimage{S25} 
-\cardprice{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Fallen Hope} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. \newline If this causes a minion from the nemesis deck to be discarded, deal 6 damage to the nemesis.} 
-\cardimage{S34} 
-\cardprice{8} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Fallen Hope} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. \newline If this causes a minion from the nemesis deck to be discarded, deal 6 damage to the nemesis.} 
-\cardimage{S34} 
-\cardprice{8} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Fallen Hope} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. \newline If this causes a minion from the nemesis deck to be discarded, deal 6 damage to the nemesis.} 
-\cardimage{S34} 
-\cardprice{8} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Fallen Hope} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. \newline If this causes a minion from the nemesis deck to be discarded, deal 6 damage to the nemesis.} 
-\cardimage{S34} 
-\cardprice{8} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Spell} 
-\cardtitle{Fallen Hope} 
-\cardborder{} 
-\cardcontent{\Cast: Deal 6 damage. \newline If this causes a minion from the nemesis deck to be discarded, deal 6 damage to the nemesis.} 
-\cardimage{S34} 
-\cardprice{8} 
+\cardcontent{The brambles rush Gravehold. \newline Unleash.} 
+\cardimage{VolatileMan} 
+\cardprice{1} 
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
