--- a/ZXcList2.tex
+++ b/ZXcList2.tex
@@ -65,6 +65,42 @@
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Revoke} 
+\cardborder{} 
+\cardcontent{Unleash. \newline Return one player's Position token on a minion to that player. } 
+\cardimage{ChannelMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Trample} 
+\cardborder{} 
+\cardcontent{Unleash. \newline Resolve the persistent effect of two different claws in play.} 
+\cardimage{ChannelMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Aether Storm} 
+\cardborder{} 
+\cardcontent{\Power 3: If there are no claws in play, Unleash twice. Otherwise, resolve the Persistent effect of each claw in play. } 
+\cardimage{ChannelMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Obscure} 
+\cardborder{} 
+\cardcontent{Players cannot place Position tokens on claws this turn. \newline Unleash twice.} 
+\cardimage{ChannelMan} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
 \cardbackground{Minion} 
 \cardtitle{Hunting Claw} 
 \cardborder{} 
@@ -72,6 +108,524 @@
 \cardimage{ChannelMan} 
 \cardprice{2} 
 \cardhp{7} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Spring of Fury} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 3: Unleash twice. \newline Place this next to the nemesis mat. For the rest of the game, when a claw is placed into play, it gains 1 life.} 
+\cardimage{ChannelMan} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Erupt} 
+\cardborder{} 
+\cardcontent{If there is one or less claws in play, Unleash three times. Otherwise, resolve the Persistent effect of each claw in play. } 
+\cardimage{ChannelMan} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Disruption Ray} 
+\cardborder{} 
+\cardcontent{\To \Discard: Any player destroys three cards in hand that cost 3 \Money{} or more. \newline \Power 2: Unleash three times. Return one player's Position token on a minion to that player. Players cannot place Position tokens this turn.} 
+\cardimage{ChannelMan} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Cracked Crystal} 
+\cardborder{} 
+\cardcontent{When this is destroyed, return it to the supply pile. \newline Gain 1 \Money{}. \newline \Or \newline Destroy this. You may destroy a Cracked Crystal in your discard pile.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Shatter} 
+\cardborder{} 
+\cardcontent{\Power X: For each nemesis token The Wailing has, Gravehold suffers 7 damage. Then, the nemesis gains one nemesis token. \newline Do not discard this card from play. Instead, add X-1 power tokens to this card.} 
+\cardimage{CrystalMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Crystal Flood} 
+\cardborder{} 
+\cardcontent{The player with the target token gains three Cracked Crystals and places them on top of their deck. \newline Pass the target token clockwise.} 
+\cardimage{CrystalMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Accelerate} 
+\cardborder{} 
+\cardcontent{Unleash. \newline Remove one power token from Shatter. } 
+\cardimage{CrystalMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Barrage} 
+\cardborder{} 
+\cardcontent{Unleash. \newline The nemesis gains one nemesis token.} 
+\cardimage{CrystalMan} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{Fused Crystals} 
+\cardborder{} 
+\cardcontent{\Persistent: Any player suffers 2 damage and gains 1 Cracked Crystal.} 
+\cardimage{CrystalMan} 
+\cardprice{2} 
+\cardhp{11} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Arc of Destruction} 
+\cardborder{} 
+\cardcontent{\Power 2: Remove two power tokens from Shatter. Any player suffers 4 damage.} 
+\cardimage{CrystalMan} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{Essence Feeder} 
+\cardborder{} 
+\cardcontent{\Persistent: Gravehold suffers 2 damage. Any player discards a card in hand that has the same type as the top card of the Exiled pile.} 
+\cardimage{ExileMan} 
+\cardprice{1} 
+\cardhp{5} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Curse of Aging 4P} 
+\cardborder{} 
+\cardcontent{This cannot be destroyed or exiled. \newline When you draw this, if there are 6 or more nemesis cards in the nemesis discard pile, suffer 1 damage. \newline When you draw this, draw a card. Then, discard this card.} 
+\cardimage{ExileMan} 
+\cardprice{} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Curse of Aging 4P} 
+\cardborder{} 
+\cardcontent{This cannot be destroyed or exiled. \newline When you draw this, if there are 6 or more nemesis cards in the nemesis discard pile, suffer 1 damage. \newline When you draw this, draw a card. Then, discard this card.} 
+\cardimage{ExileMan} 
+\cardprice{} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Curse of Aging 4P} 
+\cardborder{} 
+\cardcontent{This cannot be destroyed or exiled. \newline When you draw this, if there are 6 or more nemesis cards in the nemesis discard pile, suffer 1 damage. \newline When you draw this, draw a card. Then, discard this card.} 
+\cardimage{ExileMan} 
+\cardprice{} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Curse of Aging 4P} 
+\cardborder{} 
+\cardcontent{This cannot be destroyed or exiled. \newline When you draw this, if there are 6 or more nemesis cards in the nemesis discard pile, suffer 1 damage. \newline When you draw this, draw a card. Then, discard this card.} 
+\cardimage{ExileMan} 
+\cardprice{} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 3 damage. Any player suffers 3 damage.} 
+\cardimage{FinalMan} 
+\cardprice{0} 
+\cardhp{5+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 3 damage. Any player suffers 3 damage.} 
+\cardimage{FinalMan} 
+\cardprice{1} 
+\cardhp{10+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 4 damage. Any player suffers 3 damage.} 
+\cardimage{FinalMan} 
+\cardprice{2} 
+\cardhp{10+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 4 damage. Any player suffers 4 damage.} 
+\cardimage{FinalMan} 
+\cardprice{3} 
+\cardhp{10+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 4 damage. Any player suffers 4 damage.} 
+\cardimage{FinalMan} 
+\cardprice{4} 
+\cardhp{15+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 5 damage. Any player suffers 4 damage.} 
+\cardimage{FinalMan} 
+\cardprice{5} 
+\cardhp{15+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 5 damage. The player with the lowest life suffers 4 damage.} 
+\cardimage{FinalMan} 
+\cardprice{6} 
+\cardhp{15+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 5 damage. The player with the lowest life suffers 4 damage.} 
+\cardimage{FinalMan} 
+\cardprice{7} 
+\cardhp{20+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 5 damage. The player with the lowest life suffers 5 damage.} 
+\cardimage{FinalMan} 
+\cardprice{8} 
+\cardhp{20+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{World Devourer} 
+\cardborder{} 
+\cardcontent{This has no maximum life. \newline \Immediately: This minion gains life equal to the life of the nemesis. \newline \Persistent: Gravehold suffers 5 damage. The player with the lowest life suffers 5 damage.} 
+\cardimage{FinalMan} 
+\cardprice{9} 
+\cardhp{25+} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Bolster} 
+\cardborder{} 
+\cardcontent{Unleash. Any player suffers 3 damage. \newline \Or \newline The nemesis gains one nemesis token.} 
+\cardimage{FinalMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Thickened Hide} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 5 \Money{}. \newline \Power 2: Unleash. The nemesis gains one nemesis token.} 
+\cardimage{FinalMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Unveil} 
+\cardborder{} 
+\cardcontent{Gravehold suffers 6 damage. \newline \Or \newline The nemesis gains two nemesis tokens.} 
+\cardimage{FinalMan} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{Inhibiting Drake} 
+\cardborder{} 
+\cardcontent{\Immediately: This minion suffers 1 damage for each nemesis token the nemesis has. \newline \Persistent: Any player suffers 3 damage.} 
+\cardimage{FinalMan} 
+\cardprice{2} 
+\cardhp{14} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Empower Ritual} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 3: The nemesis gains two nemesis tokens. Gravehold suffers 4 damage.} 
+\cardimage{FinalMan} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Terminate} 
+\cardborder{} 
+\cardcontent{The nemesis gains two nemesis tokens. \newline Unleash.} 
+\cardimage{FinalMan} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{Spine Thresher} 
+\cardborder{} 
+\cardcontent{\Immediately: This minion suffers damage equal to the number of players in the game. \newline \Persistent: Unleash.} 
+\cardimage{general} 
+\cardprice{1} 
+\cardhp{8} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -116,11 +670,58 @@
 \hspace{-4mm}
 \begin{tikzpicture} 
 \cardbackground{Power} 
+\cardtitle{Regenerative Light} 
+\cardborder{} 
+\cardcontent{\Power 4: The pylons collectively gain 5 life.} 
+\cardimage{PylonMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
 \cardtitle{Channeled Focus} 
 \cardborder{} 
 \cardcontent{\Power 3: If there is a pylon with 5 or less life, Gravehold suffers 3 damage. Otherwise, Gravehold suffers 6 damage.} 
 \cardimage{PylonMan} 
 \cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{Fiend of Protection} 
+\cardborder{} 
+\cardcontent{Players cannot deal damage to Pylons. \newline \Persistent: Any player discards their most expensive gem in hand.} 
+\cardimage{PylonMan} 
+\cardprice{2} 
+\cardhp{11} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{Dismantler} 
+\cardborder{} 
+\cardcontent{\Persistent: Gravehold suffers 2 damage. A pylon gains 1 life.} 
+\cardimage{PylonMan} 
+\cardprice{2} 
+\cardhp{8} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Mending Ritual} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 3: Gravehold suffers 5 damage. \newline \Or \newline Place a discarded Pylon back into play.} 
+\cardimage{PylonMan} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Revive} 
+\cardborder{} 
+\cardcontent{Place a discarded Pylon back into play. \newline Gravehold suffers 3 damage.} 
+\cardimage{PylonMan} 
+\cardprice{3} 
 \end{tikzpicture}
 \hspace{-4mm}
 \begin{tikzpicture} 
@@ -131,6 +732,98 @@
 \cardimage{PylonMan} 
 \cardprice{3} 
 \cardhp{17} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Bramble Reminder} 
+\cardborder{} 
+\cardcontent{(Reminder card) \newline At the start of the nemesis turn, the brambles rush Gravehold. Roll the bramble die and move each bramble that many spaces toward Gravehold.} 
+\cardimage{VolatileMan} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Heave} 
+\cardborder{} 
+\cardcontent{The brambles rush Gravehold. \newline Unleash.} 
+\cardimage{VolatileMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Scorched Advance} 
+\cardborder{} 
+\cardcontent{Unleash. \newline Any player suffers 2 damage. \newline Move the bramble closest to Gravehold two spaces toward Gravehold.} 
+\cardimage{VolatileMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{March of Horror} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 5 \Money{}. \newline \Power 3: The brambles rush Gravehold. Any player suffers 3 damage.} 
+\cardimage{VolatileMan} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{Catapult Army} 
+\cardborder{} 
+\cardcontent{\Persistent: Any player suffers 2 damage. The brambles rush Gravehold.} 
+\cardimage{VolatileMan} 
+\cardprice{2} 
+\cardhp{10} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{To The Walls} 
+\cardborder{} 
+\cardcontent{\Power 3: Unleash. Any player suffers 2 damage. The brambles rush Gravehold twice.} 
+\cardimage{VolatileMan} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Forward Fortification} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 3: Unleash twice. Set this next to the nemesis mat. For the rest of the game, when a bramble enters play, it moves one space toward Gravehold.} 
+\cardimage{VolatileMan} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardtitle{Mob} 
+\cardborder{} 
+\cardcontent{Place one bramble into play at positions 1, 2 and 3.} 
+\cardimage{VolatileMan} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardtitle{Entwined General} 
+\cardborder{} 
+\cardcontent{When brambles enter play, they immediately move one space toward Gravehold. \newline \Persistent: Unleash. Any player suffers 2 damage.} 
+\cardimage{VolatileMan} 
+\cardprice{3} 
+\cardhp{15} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardtitle{Extending Tendrils} 
+\cardborder{} 
+\cardcontent{\Power 2: Unleash twice. Move all brambles at position 2 or closer two spaces toward Gravehold.} 
+\cardimage{VolatileMan} 
+\cardprice{3} 
 \end{tikzpicture}
 \hspace{-4mm}
 \end{center}
