--- a/ZXcList3.tex
+++ b/ZXcList3.tex
@@ -13,5 +13,266 @@
 \cardprice{0} 
 \end{tikzpicture}
 \hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardtitle{"Rip, help!"} 
+\cardborder{} 
+\cardcontent{Gain a charge.} 
+\cardimage{R2} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardtitle{"Rip, help!"} 
+\cardborder{} 
+\cardcontent{Gain a charge.} 
+\cardimage{R2} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardtitle{"Rip, go!"} 
+\cardborder{} 
+\cardcontent{Focus any ally's breach twice.} 
+\cardimage{R4} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardtitle{"Rip, go!"} 
+\cardborder{} 
+\cardcontent{Focus any ally's breach twice.} 
+\cardimage{R4} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardtitle{Smithilite} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline \Or \newline Destroy a Spark or Crystal in hand. Gain the corresponding Forged card from the Forged deck and place it into your hand.} 
+\cardimage{R7} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Relic} 
+\cardtitle{Actuate} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline Gain an additional 2 \Money{} that can only be be used to gain a relic.} 
+\cardimage{S3} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Spark} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 1 damage. \newline \Or \newline \Cast: Focus your III breach.} 
+\cardimage{S9} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Spark} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 1 damage. \newline \Or \newline \Cast: Focus your III breach.} 
+\cardimage{S9} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Flame} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage.} 
+\cardimage{S5} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Flame} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage.} 
+\cardimage{S5} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Arc} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 2 damage. Focus any player's breach.} 
+\cardimage{S6} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Arc} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 2 damage. Focus any player's breach.} 
+\cardimage{S6} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Inferno} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 5 damage.} 
+\cardimage{S7} 
+\cardprice{6} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Inferno} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 5 damage.} 
+\cardimage{S7} 
+\cardprice{6} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Gift} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. Any ally gains 1 charge and 1 life.} 
+\cardimage{S8} 
+\cardprice{6} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Mazra's Gift} 
+\cardborder{} 
+\cardcontent{\Cast: Deal 3 damage. Any ally gains 1 charge and 1 life.} 
+\cardimage{S8} 
+\cardprice{6} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Spell} 
+\cardtitle{Thorn} 
+\cardborder{} 
+\cardcontent{Only Inco can gain this card. \newline \Cast: Deal 2 damage.} 
+\cardimage{S11} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Graviton Silicate} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. Any ally may lose 1 charge. If they do, gain 1 charge.} 
+\cardimage{G6} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Verdant Mulch} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline \Or \newline Gain a Thorn from the Thorn deck. Place that card in any player's discard pile.} 
+\cardimage{G8} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Gem} 
+\cardtitle{Verdant Mulch} 
+\cardborder{} 
+\cardcontent{Gain 1 \Money{}. \newline \Or \newline Gain a Thorn from the Thorn deck. Place that card in any player's discard pile.} 
+\cardimage{G8} 
+\cardprice{0} 
+\end{tikzpicture}
+\hspace{-4mm}
 \end{center}
 \end{document}
