--- a/charSheetKrawth.tex
+++ b/charSheetKrawth.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Krawth}
-\ability{Meek's Might: Activate during your main phase: Return any number of cards that cost 0 \Money{} in your discard pile to your hand.}{5}
+\ability{Meek's Might: Activate during your main phase: \newline Return any number of cards that cost 0 \Money{} in your discard pile to your hand.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Crystal}{Crystal}{Smithilite}{Spark}{Spark}
-\notes{The Forge Deck is a personal deck of upgraded sparks and crystals that deal 2 damage / gain 2 mana respectively. Players can only gain cards from this deck using Smithilite.}
+\notes{Set aside all of the Forged Crystals and Forged Sparks. These form the Forged deck.}
 \startingPrep{own0.png}{1}{own1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
