--- a/charSheetRazra.tex
+++ b/charSheetRazra.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Razra}
-\ability{Hammertime: Activate during your main phase: Destroy a card with Rip in its name in your hand. Gain a card with Rip in its name from the personal upgrade deck that costs 3 more \Money{} and place it into your hand. \newline \Or \newline Place all cards with Rip in their name in your discard pile or that you have played this turn into your hand.}{4}
-\startingDeck{Crystal}{Crystal}{Crystal}{Rip}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{Rip}{Spark}
-\notes{Place all cards with Rip in their names next to this mat. These cards can only be gained by Razra's Hammertime ability.}
+\ability{Discipline Rip: Activate during your main phase: \newline Destroy a card with "Rip" in its name in your hand. Gain a card with "Rip" in its name from the personal upgrade deck that costs 3 \Money{} more than the destroyed card. \newline \Or \newline Place all cards with "Rip" in their name that you have played this turn or are in your discard pile into your hand.}{4}
+\startingDeck{Crystal}{Crystal}{Crystal}{"Rip, come!"}{Spark}
+\startingHand{Crystal}{Crystal}{Crystal}{"Rip, come!"}{Spark}
+\notes{Set aside all cards with "Rip" in their names next to this mat. These cards can only be gained by Razra's Hammertime ability.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
