--- a/charSheetRhia.tex
+++ b/charSheetRhia.tex
@@ -5,7 +5,7 @@
 \cardborder 
 \basicinfo 
 \name{Rhia}
-\ability{Sublimate: Activate during your main phase: If you've played three or more Relics this turn, any ally draws four cards. Otherwise, return a relic in hand or discard pile to its supply pile and then gain a card with cost equal to or less than the returned card's cost plus one and place the gained card into your hand.}{4}
+\ability{Sublimate: Activate during your main phase: \newline If you've played three or more Relics this turn, any ally draws four cards. Otherwise, return a relic in your hand or discard pile to its supply pile and then gain a card with cost equal to or less than the returned card's cost plus one. Place the gained card into your hand.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Crystal}
 \startingHand{Crystal}{Crystal}{Crystal}{Actuate}{Spark}
 \notes{}
