--- a/charSheetSahala.tex
+++ b/charSheetSahala.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Sahala}
-\ability{Star Bind: Activate during your main phase or casting phase: Reveal the top three cards of your deck. Add a spell revealed this way to your hand. Prep up to two spells in hand to your opened Celestial Breach.}{4}
+\ability{Star Bind: Activate during your main phase or casting phase: \newline Reveal the top three cards of your deck. Add a spell revealed this way to your hand. Prep up to two spells in hand to your opened Celestial Breach.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Black Meteorite}{Spark}
-\notes{IV breach is celestial breach. +2 damage on spells cast from this breach.}
+\notes{Sahala's IV breach is the Celestial Breach. Spells cast from this opened breach deal 2 additional damage.}
 \startingPrep{own0.png}{1}{rent1.png}{4}{rent2.png}{1}{specialbreach0.png}{2}
 \end{tikzpicture}
 
