--- a/charSheetSeshia.tex
+++ b/charSheetSeshia.tex
@@ -5,7 +5,7 @@
 \cardborder 
 \basicinfo 
 \name{Seshia}
-\ability{Aeplosion: Activate during any ally's main phase: That ally gains 6 \Money{}.}{5}
+\ability{Aeplosion: Activate during any ally's main phase: \newline That ally gains 6 \Money{}.}{5}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Graviton Silicate}
 \notes{}
