--- a/charSheetSoskel.tex
+++ b/charSheetSoskel.tex
@@ -5,7 +5,7 @@
 \cardborder 
 \basicinfo 
 \name{Soskel}
-\ability{Surging Sigil: Activate during your main phase: Place a Surge token on any player's breach without one. When a player casts a spell from a breach with a Surge token, that player gains 1 charge. \newline \Or \newline Gain 3 life.}{5}
+\ability{Surging Sigil: Activate during your main phase: \newline Place a "Gain 1 charge on cast" token on any player's breach that doesn't have one.  \newline \Or \newline Gain 3 life.}{5}
 \startingDeck{Spark}{Crystal}{Crystal}{Crystal}{Crystal}
 \startingHand{Crystal}{Crystal}{Crystal}{Hushed Salite}{Spark}
 \notes{}
