--- a/charSheetTalx.tex
+++ b/charSheetTalx.tex
@@ -5,7 +5,7 @@
 \cardborder 
 \basicinfo 
 \name{Talx}
-\ability{Soaring Ash: Activate during your main phase: Destroy two sparks in your hand. If you do, shuffle your turn order card into the turn order deck. \newline \Or \newline Gravehold gains 7 life.}{6}
+\ability{Soaring Ash: Activate during your main phase: \newline Destroy two Sparks in hand. If you do, shuffle your turn order card into the turn order deck. \newline \Or \newline Gravehold gains 7 life.}{6}
 \startingDeck{Furnacium}{Spark}{Spark}{Spark}{Spark}
 \startingHand{Furnacium}{Spark}{Spark}{Spark}{Spark}
 \notes{}
