--- a/charSheetGygar.tex
+++ b/charSheetGygar.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Gygar}
-\ability{Energize Palm: Activate during your main phase: Place a "+1 damage on cast" token on your I breach.}{4}
+\ability{Energize Palm: Activate during your main phase: \newline Place a "+1 damage on cast" token on your Potential Breach.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Spark}{Spark}
-\startingHand{Crystal}{Crystal}{Crystal}{Spark}{Tidal Surge}
-\notes{Up to 10 +1 damage tokens can be placed on the I breach.}
+\startingHand{Crystal}{Crystal}{Crystal}{Tidal Surge}{Spark}
+\notes{Gygar's I breach is the Potential Breach. Up to ten +1 damage tokens can be placed on this breach. Spells cast from this breach will deal 1 additional damage for each +1 damage token that has been placed on this breach.}
 \startingPrep{specialbreachO.png}{1}{own1.png}{1}{rent2.png}{1}{rent3.png}{1}
 \end{tikzpicture}
 
