--- a/charSheetMazra.tex
+++ b/charSheetMazra.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Mazra}
-\ability{Research: Activate during your main phase: Destroy a card with Mazra in its name in your hand or discard pile. Gain a card with Mazra in its name from the personal upgrade deck that costs 3 more \Money{}. \newline \Or \newline Place all cards with Mazra in their name in your discard pile into your hand.}{4}
+\ability{Research: Activate during your main phase: \newline Destroy a card with "Mazra's" in its name in your hand or discard pile. Gain a card with "Mazra's" in its name from the personal upgrade deck that costs 3 \Money{} more than the destroyed card. \newline \Or \newline Place all cards with "Mazra's" in their name in your discard pile into your hand.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Mazra's Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Mazra's Spark}
-\notes{III breach is +1 charge on cast when opened. Place all cards with Rip in their names next to this mat. These cards can only be gained by Mazra's Research ability.}
+\notes{When a spell is cast from Mazra's opened III breach, the player casting the spell gains 1 charge. \newline Set aside all cards with "Mazra's" in their name next to this mat. While these cards are set aside, they can only be gained by Mazra's Research ability.}
 \startingPrep{own0.png}{1}{rent1.png}{2}{specialbreach0.png}{2}{rent3.png}{2}
 \end{tikzpicture}
 
