--- a/charSheetQu.tex
+++ b/charSheetQu.tex
@@ -5,10 +5,10 @@
 \cardborder 
 \basicinfo 
 \name{Qu}
-\ability{Form Mend: Activate during your main phase: Gain 1 life for each opened breach you have. You may destroy one card in your discard pile.}{4}
+\ability{Form Mend: Activate during your main phase: \newline Gain 1 life for each opened breach you have. \newline You may destroy one card in your discard pile.}{4}
 \startingDeck{Crystal}{Crystal}{Crystal}{Crystal}{Spark}
 \startingHand{Crystal}{Crystal}{Crystal}{Crystal}{Gift of Spirit}
-\notes{IV breach is Gravehold gains 1 life on cast.}
+\notes{When a spell is cast from Qu's opened IV breach, Gravehold gains 1 life.}
 \startingPrep{own0.png}{1}{rent1.png}{1}{rent2.png}{2}{specialbreach0.png}{1}
 \end{tikzpicture}
 
